// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/types.proto";

import "../ccsds_mc/ValidityState.proto";

package ccsds_mc_aggregation.protobuf;

message Parameter {
extensions 8 to 108;

  optional ccsds_mal.protobuf.BLOB definition = 1;
  optional ccsds_mal.protobuf.ATTRIBUTE extractedValue = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE rawValue = 3;
  optional ccsds_mal.protobuf.ATTRIBUTE convertedValue = 4;
  optional ccsds_mal.protobuf.USHORT triggerCounter = 5;
  optional ccsds_mal.protobuf.STRING monitoringState = 6;
  optional ccsds_mc.protobuf.ValidityState validityState = 7;
}
